8188122: Path length limits on Windows leads to obscure class loading failures

Used the unicode version of windows API's to handled long paths and avoid using the stat() function.

Reviewed-by: stuefe, iklam